--- a/src/components/slide_in/slide_in.css
+++ b/src/components/slide_in/slide_in.css
@@ -7,6 +7,29 @@
   }
 }
 
-.SlideIn {
-  animation: 1s ease-out 0s 1 slideInFromLeft;
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-300%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(300%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
