--- a/src/demo/demos.css
+++ b/src/demo/demos.css
@@ -24,6 +24,12 @@
   padding: 20px;
 }
 
+.Demos .DemoBox {
+  border-radius: 10px;
+  border: 1px solid #DDD;
+  padding: 10px;
+  margin-bottom: 10px;
+}
 .Demos .demo {
   overflow: hidden;
 }
