--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -47,6 +47,12 @@
   background: #F5923E; /* orange */
 }
 
-@keyframes  keyPressed {    from { background: #B9B9B9; } to { background: #B9B9B9; } }
-@keyframes  numPressed {    from { background: #D8D8D8; } to { background: #D8D8D8; } }
-@keyframes  orangePressed { from { background: #E06D0B; } to { background: #E06D0B; } }
+.calc .keypad .key.pressed {
+  background: #B9B9B9;
+}
+.calc .keypad .key.num.pressed {
+  background: #D8D8D8;
+}
+.calc .keypad .key.orange.pressed {
+  background: #E06D0B; /* dark orange */
+}
