--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -33,9 +33,11 @@
   padding: 10px 17px;
   border-right: 1px solid #777;
   border-bottom: 1px solid #777;
+  text-align: center;
 }
-.calc .keypad .key sub,
-.calc .keypad .key sup {
+
+.calc .keypad .key span sub,
+.calc .keypad .key span sup {
   font-size: 80%;
 }
 .calc .keypad .key.num {
