--- a/src/demo/demos.css
+++ b/src/demo/demos.css
@@ -1,26 +1,14 @@
-
-.Demos .Menu {
-  float: left;
-  width: 130px;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-.Demos .Menu > ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.Demos .Menu > ul > li {
-  padding: 7px 10px;
-}
-
-.Demos .Menu > ul > li:hover {
-  background-color: #EEE;
-}
-
-.Demos .DemoContent {
-  margin-left: 130px;
+.Demos #main {
   overflow: hidden;
+}
+.Demos .DemoContent {
+  margin-top: 30px;
   padding: 20px;
 }
 
@@ -39,4 +27,64 @@
 }
 .Demos pre.hljs {
   background: #EBF5FB;
+}
+
+@keyframes InFromLeft {
+  0%   { transform: translateX(-100%); }
+  100% { transform: translateX(0);     }
+}
+@keyframes OutToLeft {
+  0%   { transform: translateX(0);     }
+  100% { transform: translateX(-100%); }
+}
+
+
+@media all {
+  #hamburger {
+    position: absolute;
+    right: -41px;
+    padding: 3px 10px;
+    font-size: 150%;
+    display: inline-block;
+    color: #FFF;
+    background: #222; }
+
+  .Demos .Menu {
+    float:left;
+    position: relative;
+    transition: 0.3s;
+    background: #EBF5FB;
+    height:100vh;
+    z-index: 100;
+  }
+
+  .Demos .Menu.open  {  width: 120px; }
+  .Demos .Menu.close {  width: 0;     }
+
+  .Demos .Menu .links{ margin: 0; overflow: hidden;}
+  .Demos .Menu .links > .link  {
+    padding: 7px 10px;
+    transition: 0.3s;
+    overflow: hidden;
+  }
+
+  .Demos .Menu .links > .link:hover {
+    background-color: #85C1E9;
+  }
+}
+
+@media all and ( max-width: 767px ) {
+  .carousel1 { width: 100%; height: 250px;  }
+  .carousel2 { width: 100%; height: 350px;  }
+}
+
+@media all and ( min-width: 768px ) {
+  .carousel1 { width: 100%; height: 300px;  }
+  .carousel2 { width: 100%; height: 350px;  }
+}
+
+@media all and ( min-width: 1000px ) {
+  #hamburger { }
+  .carousel1 { width: 800px; height: 350px;  }
+  .carousel2 { width: 800px; height: 500px;  }
 }
