--- a/src/components/red_dot/red_dot.css
+++ b/src/components/red_dot/red_dot.css
@@ -15,19 +15,20 @@
   width:  10px;
   height: 10px;
   background: #FF0000;
+  color: #FFFFFF;
+  transition: 0.3s;
+}
+
+.RedDot > .Dot.gone {
+  width: 0;
+  height: 0;
 }
 
 .RedDot > .Dot.WithCount {
-  position: absolute;
-  top: 0;
-  right: 0;
   margin-top: -6px;
   margin-right: -6px;
-  border-radius: 50%;
   width:  16px;
   height: 16px;
-  background: #FF0000;
-  color: #FFFFFF;
   text-align: center;
   font-size: 80%;
 }
