--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -38,16 +38,20 @@
 }
 
 .Carousel .ArrowOuter .Arrow {
-  font-weight: 900;
-  font-size: 60px;
-  text-shadow: 1px 1px 0px #FFF;
+  font-size: 180%;
+  /*text-shadow: 1px 1px 0px #FFF;*/
+  border: 1px solid #777;
+  border-radius: 50%;
+  padding: 3px 5px;
+  background: #EEE;
+  opacity: 0.8;
 }
 
 
 .Carousel .ArrowOuter .Arrow.disabled {
   pointer-events: none;
   cursor: default;
-  opacity: 0.6;
+  opacity: 0.2;
 }
 
 .Carousel .Slide {
