--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -12,20 +12,21 @@
   border-radius: 10px;
   width: 20px;
   height: 35px;
-  position: absolute;
   background: #FFF;
   cursor: move;
   display: inline-block;
-  position: absolute;
 }
 
 .Slider .ui .Ruler{
   position: absolute;
   width: 100%;
-  height: 10px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .Slider .ui .Ruler .Bar{
+  width: 100%;
   height: 10px;
   background: linear-gradient(#777, #CCC, #777);
   border-radius: 5px;
